support for simple arguments

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ addopts =
     --failed-first
     --capture=no
     --tb=short
+    --verbose
     --cov=dconf
     --cov-fail-under=100
     --cov-report=html
@@ -16,4 +17,5 @@ mccabe-complexity=5
 
 [mypy]
 strict = True
+implicit_reexport = True
 ignore_missing_imports = True
