initial provider/builder implementation

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,6 @@
 addopts =
     --new-first
     --failed-first
-    --capture=no
     --tb=short
     --verbose
     --cov=dconf
@@ -14,6 +13,9 @@ addopts =
     --pylint
     --black
 mccabe-complexity=5
+
+[pylint.MESSAGE CONTROL]
+disable = too-few-public-methods
 
 [mypy]
 strict = True
